Revision history for Perl extension Wx.

0.57
	- Made the XS++ and overload preprocessors installable,
	  to be used by extensions.

0.56  Fri Aug 11 22:29:33 CEST 2006
	- Many thread-safety fixes.
	- wxMotif compatibility.
	- Build again under Windows.

0.55  Sun Aug  6 19:48:31 CEST 2006
	- Mac OS X 10.4 with latest Xcode compilation fixes.
	- Added wxTreebook, wxChoicebook, wxHyperlinkCtrl,
	  wxPowerEvent. (2.7)
	- Added Wx::SimpleApp.
	- Make the example in the SYNOPSIS actually show a window.

0.54  Sun Jul 16 14:26:52 CEST 2006
        - Compatibility with GCC 4.0 and 4.1.
	- Minor compatibility fixes for various wxWidgets releases.

0.53  Sun Jul  9 12:42:59 CEST 2006
        - wxWidgets 2.4 and wxMac compilation fixes.

0.52  Fri Jul  7 22:29:57 CEST 2006
	- Compilation fixes when wxMediaCtrl is disabled in wxWidgets.

0.51  Wed Jul  5 20:41:48 CEST 2006
	- Added Wx::Sound.
	- Compilation fixes for MSVC8 (thanks to John Ralls).
	- Bumped Alien::wxWidgets requirement to 0.15.

0.50  Fri Jun 23 11:51:17 CEST 2006
	- Fixed pod tests to work with older Test::Pod releases.

0.49_07  Sun Jun 18 18:06:05 CEST 2006
	- Compilation fixes for wxWidgets 2.5.3.
	- More additions for wxWidgets 2.7.x.

0.49_06  Sun May 21 22:34:21 CEST 2006
	- Compatibility with wxWidgets CVS HEAD.
	- Added various missing functions for wxWidgets 2.6.x
	  and 2.7.x.

0.49_05  Mon May  1 18:27:14 CEST 2006
	- When Alien::wxWidgets is missing try to retrigger
	  rebuilding of the Makefile using a dummy dependency.

0.49_04  Sat Apr 22 23:36:15 CEST 2006
	- Fixed reference counting/ownership for Wx::PlDataObject.

0.49_03  Thu Apr 20 22:40:37 CEST 2006
	- Handle Alien::wxWidgets prerequisite correctly.

0.49_02  Sun Apr 16 20:45:39 CEST 2006
	- Added missing files to MANIFEST.

0.49_01  Sun Apr 16 17:01:25 CEST 2006
	- Added Wx::MediaCtrl.
	- Refactored build system, now based upon Alien::wxWidgets.

0.27  Sun Jan  1 21:13:27 CET 2006
	- Restored compatibility with wxWidgets 2.5.3.