@@ -4,7 +4,7 @@
 // Author:      Mattia Barbon
 // Modified by:
 // Created:     10/03/2001
-// RCS-ID:      $Id: Html.xs,v 1.18 2006/08/19 18:53:45 mbarbon Exp $
+// RCS-ID:      $Id: Html.xs,v 1.19 2006/08/20 09:25:20 mbarbon Exp $
 // Copyright:   (c) 2001-2004, 2006 Mattia Barbon
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
@@ -27,6 +27,7 @@ INCLUDE: XS/HtmlHelpController.xs
 #if wxPERL_USE_PRINTING_ARCHITECTURE
 
 INCLUDE: XS/HtmlEasyPrinting.xs
+INCLUDE: XS/HtmlDCRenderer.xs
 
 #endif
 
